syntax = "proto3";
option go_package = "github.com/satont/twir/libs/grpc/generated/api/keywords";
package api.keywords;

message Keyword {
	string id = 1;
	string channel_id = 2;
	string text = 3;
	string response = 4;
	bool enabled = 5;
	int32 cooldown = 6;
	bool is_reply = 7;
	bool is_regular = 8;
	int32 usages = 9;
}

message GetAllResponse {
	repeated Keyword keywords = 1;
}

message GetByIdRequest {
	string id = 1;
}

message GetByIdResponse {
	Keyword keyword = 1;
}

message CreateRequest {
	string text = 1;
	string response = 2;
	bool enabled = 3;
	int32 cooldown = 4;
	bool is_reply = 5;
	bool is_regular = 6;
	int32 usages = 7;
}

message DeleteRequest {
	string id = 1;
}

message PutRequest {
	string id = 1;
	CreateRequest keyword = 2;
}

message PatchRequest {
	string id = 1;
	bool enabled = 2;
}
